--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android MVVM Sample</string>
+    <string name="generic_error_message">Error</string>
 </resources>
